fixed spacing in media

--- a/ivey-sus/src/styles/Media.css
+++ b/ivey-sus/src/styles/Media.css
@@ -49,52 +49,6 @@
     justify-content: center;
 }
 
-@media screen and (min-width: 600px) and (max-width: 900px) {
-    .section {
-        display: flex;
-        background-color: blue;
-    }
-    
-    .content {
-        flex: 2;
-        flex-direction: column;
-        margin-top: 7%;
-        margin-left: 5%;
-    }
-    
-    .content h1 {
-        font-size: 3.5rem;
-        background-color: white;
-        color: #2C4111;
-        font-weight: 600;
-    }
-    
-    .content p {
-        flex-direction: column;
-        margin-top: 3%;
-        margin-bottom: 3%;
-        max-width: 50rem;
-        font-size: 1.75rem;
-        font-weight: 600;
-    }
-    
-    .image-container {
-        flex: 1.8;
-        background-color: white;
-        height: 45rem;
-        margin-top: 3.5%;
-        margin-left: 3%;
-        margin-bottom: 3.5%;
-    }
-    
-    .image-container img {
-        width: 87.7%;
-        height: 100%;
-        align-items: center;
-        justify-content: center;
-    }
-}
-
 /* second container */ 
 .dark-section {
     background-color: #2F4858;
@@ -178,7 +132,7 @@
 .social-items-container{
     display:flex;
     flex-direction:row;
-    justify-content:center;
+    justify-content:space-around;
 }
 
 .social-display-container-one{
@@ -190,7 +144,11 @@
 }
 
 .social-display-container-two{
+    display:flex;
+}
 
+.social-display-container-two h2{
+    text-align:center;
 }
 
 
